Java9でテストを実行できるよう対応